<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/icon_arrow"
            android:title="@string/menu_information" />
        <item
            android:id="@+id/nav_points"
            android:icon="@drawable/icon_arrow"
            android:title="@string/menu_points" />
        <item
            android:id="@+id/nav_search_trips"
            android:icon="@drawable/icon_arrow"
            android:title="@string/menu_search_trips" />
        <item
            android:id="@+id/nav_us"
            android:icon="@drawable/icon_arrow"
            android:title="@string/menu_us" />
        <item
            android:id="@+id/nav_coments"
            android:icon="@drawable/icon_arrow"
            android:title="@string/menu_nav_coments" />
        <item
            android:id="@+id/nav_promotions"
            android:icon="@drawable/icon_arrow"
            android:title="@string/menu_promotions" />
        <item
            android:id="@+id/nav_locations"
            android:icon="@drawable/icon_arrow"
            android:title="@string/menu_locations" />
    </group>
</menu>