<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".activities.RegisterActivity"
    android:background="@color/theme_color"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/allForm"
        android:layout_marginTop="50dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="25dp">

            <TextView
                android:id="@+id/tvTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/register_client"
                android:textColor="#FF000000"
                android:textSize="50sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sub_text_register" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:padding="25dp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/etNombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:padding="15dp"
                android:hint="@string/user_name"
                android:inputType="text"
                android:autofillHints="" />

            <EditText
                android:id="@+id/etApellido"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:padding="15dp"
                android:hint="@string/user_lastname"
                android:inputType="text"
                android:autofillHints="" />

            <EditText
                android:id="@+id/etCorreo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:padding="15dp"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:autofillHints="" />

            <EditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:padding="15dp"
                android:inputType="textPassword"
                android:hint="@string/password"
                android:autofillHints="" />

            <EditText
                android:id="@+id/etConfirmPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:padding="15dp"
                android:inputType="textPassword"
                android:hint="@string/confirm_password"
                android:autofillHints="" />

<!--            <TextView-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_marginTop="16dp"-->
<!--                android:text="@string/address" />-->

<!--            <EditText-->
<!--                android:id="@+id/etDireccion"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_marginTop="4dp"-->
<!--                android:padding="15dp"-->
<!--                android:inputType="text"-->
<!--                tools:ignore="LabelFor"-->
<!--                android:background="@android:drawable/editbox_background_normal"-->
<!--                android:autofillHints="" />-->

            <EditText
                android:id="@+id/etTelefono"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:padding="15dp"
                android:inputType="phone"
                android:hint="@string/celphone_number"
                android:autofillHints="" />

            <Button
                android:id="@+id/btnGuardar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:backgroundTint="#FCD919"
                android:text="@string/save"
                android:textColor="#161717" />

        </LinearLayout>
    </LinearLayout>
</LinearLayout>