<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="10dp"
    android:layout_marginVertical="16dp"
    app:cardCornerRadius="20dp"
    app:cardElevation="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/iv_img"
            android:layout_width="120dp"
            android:layout_height="170dp"
            android:contentDescription="@string/chan_chan"
            android:scaleType="fitXY"
            android:src="@drawable/chan_chan_img"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:layout_width="265dp"
            android:layout_height="170dp"
            android:orientation="vertical"
            android:gravity="center"
            tools:layout_editor_absoluteX="127dp">

            <TextView
                android:id="@+id/title_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/chan_chan_text"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tv_title_description"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginStart="10dp"
                android:text="@string/lorem_ipsum"
                android:textColor="@color/black"
                android:textSize="5sp"
                tools:ignore="SmallSp" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/theme_color"
                android:text="@string/more"/>
        </LinearLayout>
    </LinearLayout>

</androidx.cardview.widget.CardView>