<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".activities.RegisterActivity"
    android:background="@color/theme_color"
    android:orientation="vertical">
    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/editar_perfil"
        android:textSize="30sp" />
    <LinearLayout
        android:id="@+id/allForm"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:background="@color/white"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="189dp"
            android:layout_height="155dp"
            android:gravity="center"
            android:layout_marginTop="30dp"
            android:backgroundTint="@color/profile_edit"
            android:background="@drawable/circular_background">
            <ImageView
                android:id="@+id/imageView"
                android:layout_width="93dp"
                android:layout_height="90dp"
                android:contentDescription="@string/nav_header_desc"
                android:paddingTop="@dimen/nav_header_vertical_spacing"
                app:srcCompat="@drawable/profile" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="120dp"
            android:padding="25dp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/etNombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:padding="10dp"
                android:hint="@string/user_name"
                android:inputType="text"
                android:autofillHints="" />

            <EditText
                android:id="@+id/etApellido"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:padding="10dp"
                android:hint="@string/user_lastname"
                android:inputType="text"
                android:autofillHints="" />

            <EditText
                android:id="@+id/etCorreo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:padding="10dp"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:autofillHints="" />

            <EditText
                android:id="@+id/etTelefono"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:padding="10dp"
                android:inputType="phone"
                android:hint="@string/celphone_number"
                android:autofillHints="" />

            <Button
                style="@style/ButtonStyle"
                android:id="@+id/btnPerfilGuardar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:textSize="30sp"
                android:text="@string/save"
                android:layout_gravity="center"
                android:textColor="#161717" />

        </LinearLayout>

    </LinearLayout>
</LinearLayout>