<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/theme_color"
    tools:context=".activities.MenuActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/menu"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:padding="30dp"
        android:layout_gravity="center_horizontal"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginBottom="50dp"
        android:background="@color/white">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_marginTop="35dp"
            android:orientation="horizontal"
            tools:ignore="UselessParent">

            <ImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:contentDescription="@string/promotion"
                android:src="@drawable/promocion" />
            <ImageView
                android:id="@+id/iv_img_search"
                android:clickable="true"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:src="@drawable/buscar_viajes"
                android:contentDescription="@string/looking_for"
                android:focusable="true" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="25dp"
            android:gravity="center_horizontal">
            <ImageView
                android:id="@+id/iv_img_profile"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:clickable="true"
                android:contentDescription="@string/perfil"
                android:src="@drawable/perfil"
                android:focusable="true" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:layout_marginBottom="50dp"
            tools:ignore="UselessParent">
            <ImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:contentDescription="@string/promotion"
                android:src="@drawable/nosotros" />
            <ImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:src="@drawable/comentarios"
                android:contentDescription="@string/looking_for"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>